fixed text overflow issue and error check

--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ button {
 
 #display {
     min-height: 100px;
-    max-height: 15vh;
     width: 100%;
     border: 1px solid black;
     background-color: white;
